syntax = "proto2";

option java_package = "org.flexiblepower.proto";
option java_outer_classname = "RamlProto";

message RamlRequest {
	enum Method {
		GET = 0;
		HEAD = 1;
		POST = 2;
		PUT = 3;
		DELETE = 4;
		TRACE = 5;
		OPTIONS = 6;
		CONNECT = 7;
		PATCH = 8;
	}
	required int32 id = 1;
	required Method method = 2;
	required string uri = 3;
	map<string, string> headers = 4;
	optional string body = 5;
}

message RamlResponse {
	required int32 id = 1;
	required int32 status = 2;
	map<string, string> headers = 3;
	optional bytes body = 4;
}

