message HTTPRequest {
	enum Method {
		GET = 0;
		POST = 1;
		PUT = 2;
	}
	required int32 id = 1;
	required Method method = 2;
	required string uri = 3;
	map<string, string> headers = 4;
	optional string body = 5;
}

message HTTPResponse {
	required int32 id = 1;
	required int32 status = 2;
	map<string, string> headers = 3;
	optional string contentType = 4;
	optional bytes body = 5;
}